--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.10.1
   modal_progress_hud_nsn: ^0.4.0
   flutter_chat_bubble: ^2.0.2
+  image_picker: ^1.0.4
+  firebase_storage: ^11.4.1
   
 dev_dependencies:
   flutter_test:
